// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form should display custom message 1`] = `
<form class="ant-form ant-form-horizontal">
  <div class="ant-row ant-form-item ant-form-item-with-help">
    <div class="ant-form-item-label"><label for="account" title="Account" class="">Account</label></div>
    <div class="ant-form-item-control-wrapper">
      <div class="ant-form-item-control has-error"><span class="ant-form-item-children"><input data-__meta="[object Object]" data-__field="[object Object]" id="account" class=""></span>
        <div class="ant-form-explain"><span class="">Account does not exist, <a rel="noopener noreferrer" href="https://www.alipay.com/" target="_blank">Forgot account?</a></span></div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Form should display two message 1`] = `
<form class="ant-form ant-form-horizontal">
  <div class="ant-row ant-form-item ant-form-item-with-help">
    <div class="ant-form-item-label"><label for="account" title="Account" class="">Account</label></div>
    <div class="ant-form-item-control-wrapper">
      <div class="ant-form-item-control has-error"><span class="ant-form-item-children"><input data-__meta="[object Object]" data-__field="[object Object]" id="account" class=""></span>
        <div class="ant-form-explain">Error message 1 Error message 2</div>
      </div>
    </div>
  </div>
</form>
`;
